// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card renders pipeline body 1`] = `
<DocumentFragment>
  <div
    class="test-class card"
  >
    <div
      class="card-header"
    >
      Test Heading of Card
    </div>
    <div
      class="card-body"
    >
      <div
        class="text-danger p-3"
      >
        Error running panel: No handler for ECHO_SENDER was registered in the receiving end
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`card renders text body 1`] = `
<DocumentFragment>
  <div
    class="test-class card"
  >
    <div
      class="card-header"
    >
      Test Heading of Card
    </div>
    <div
      class="card-body"
    >
      Test body of card
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary"
    type="button"
  >
    Button under test
  </button>
</DocumentFragment>
`;

exports[`renders grid 1`] = `
<DocumentFragment>
  <div
    class="text-primary container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h1>
          Header
        </h1>
      </div>
    </div>
    <div
      class="mt-5 row"
    >
      <div
        class="p-3 col"
      >
        <p>
          left column
        </p>
      </div>
      <div
        class="p-5 col"
      >
        <p>
          right column
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders header, header_1 1`] = `
<DocumentFragment>
  <h1
    class="test-class"
  >
    Test Header
  </h1>
</DocumentFragment>
`;

exports[`renders header, header_2 1`] = `
<DocumentFragment>
  <h2
    class="test-class"
  >
    Test Header
  </h2>
</DocumentFragment>
`;

exports[`renders header, header_3 1`] = `
<DocumentFragment>
  <h3
    class="test-class"
  >
    Test Header
  </h3>
</DocumentFragment>
`;

exports[`renders paragraph text 1`] = `
<DocumentFragment>
  <p
    class="test-class"
  >
    Test Paragraph
  </p>
</DocumentFragment>
`;

exports[`renders unknown type 1`] = `
<DocumentFragment>
  <span>
    Unknown type: TheTypeForWhichAComponentIsNotDefined
  </span>
</DocumentFragment>
`;
